--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 Currently Doing my Bachelor Engineering Degree on Electronics
                 and Communication Specialization @ Jeppiaar Maamallan
                 Engineering College affiliated to Anna University from the year
-                2017 to 2021 with Aggregate of 65%.
+                2017 to 2021. 
               </p>
             </div>
           </div>
@@ -217,7 +217,7 @@
               <p>
                 Done my Associate Degree in Advanced Program in Full Stack
                 Software Specialization @ NIIT Chennai Branch from the year 2019
-                to 2021 with Aggregate of 69.70%.
+                to 2021. 
               </p>
             </div>
           </div>
@@ -233,7 +233,7 @@
               <p>
                 Done my Higher Secondary (HSC) on Computer Science
                 Specialization @ Velankanni Matriculation Higher Secondary
-                School from the year 2016 to 2017 with Aggregate of 76.16%.
+                School from the year 2016 to 2017. 
               </p>
             </div>
           </div>
@@ -249,8 +249,7 @@
               <p>
                 Done my Secondary (SSLC) in Mathematics, Science & Social
                 Science Specialization @ Anita Methodist Matriculation Higher
-                Secondary School from the year 2014 to 2015 with Aggregate of
-                73.80%.
+                Secondary School from the year 2014 to 2015. 
               </p>
             </div>
           </div>
